# MindEcho

./: .gitignore  HowToPlay.md  HowToPlay_ZH.md  README.md  README_ZH.md  main.py  migration_script.py  note.txt  pyproject.toml  system_prompt.md  test.ipynb
backend/: ai_integration.py  asset_library.json  connection_manager.py  enhanced_models.py  game_engine.py  game_logic.py  models.py  new_assrt_library.json  prompt_library.py  scene_layouts.json
backend/assets/: entities.json  maps.json
frontend/: package-lock.json  package.json
frontend/src/: App.vue  assets_guide.md
frontend/src/components/: AssetLibraryModal.vue  AssetManager.vue  ChatModal.vue  ClueBubble.vue  DebugView.vue  GameView.vue  InteractionModal.vue  LoadingIndicator.vue  ResponsiveCanvas.vue  SceneEditor.vue  SettingsModal.vue
frontend/src/router/: index.js
